deploy/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot-app
    role: production
  name: production-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      role: production
  template:
    metadata:
      labels:
        role: production
    spec:
      containers:
        - name: myweb
          image: how0326/tomcat:35
          ports:
            - containerPort: 8085
